# enigma-cpp

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Enigma.pro  LICENSE  README.md  build.sh  enigma_app.cxx  install  sonar-project.properties
.github/workflows/: build_enigma.yml
applications/: CMakeLists.txt  enigmaM3_test.cxx  enigma_app.cxx
images/: enigma_icon.icns
include/: Enigma.hxx  Plugboard.hxx  Reflector.hxx  Rotor.hxx  enigma_mainwindow.hxx  helpdialog.hxx
src/: Enigma.cxx  Reflector.cxx  Rotor.cxx  enigma_mainwindow.cxx  enigma_mainwindow.ui  helpdialog.cxx  helpdialog.ui  main.cxx
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  test_enigma.cxx
